# app/dto/auth_dto.go
@@ -1,7 +1,7 @@
 package dto
 
 type ExchangeRequest struct {
-	PhoneNumber     string `json:"phone_number" validate:"required"`
+	PhoneNumber     string `json:"phone_number" validate:"required,e164"`
 	FirebaseIdToken string `json:"firebase_id_token" validate:"required"`
 }
 
